--- a/config.json
+++ b/config.json
@@ -11,7 +11,10 @@
         "batch_size": 16,
         "num_workers": 16,
         "num_epochs": 1000,
-        "out_dir": "./model"
+        "out_dir": "./model/stgcn-first-experiment",
+        "save_n_best": 3,
+        "early_stopping_patience": 3,
+        "early_stopping_delta": 1e-4
     },
 
     "model_config": {
